Aggiunti i primi file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 js/bootstrap.js
+js/bootstrap.min.js
+js/jquery-1.11.1.min.js
+css/bootstrap-theme.min.css
+css/bootstrap-theme.css.map
+css/bootstrap-theme.css
+css/bootstrap.min.css
+css/bootstrap.css.map
+css/bootstrap.css
+fonts/glyphicons-halflings-regular.woff
+fonts/glyphicons-halflings-regular.ttf
+fonts/glyphicons-halflings-regular.svg
+fonts/glyphicons-halflings-regular.eot
